<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/set"
            android:layout_width="410dp"
            android:layout_height="57dp"
            android:id="@+id/button" android:onClick="onClickSetText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="277dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="283dp"
            android:layout_height="49dp"
            android:id="@+id/progressBar2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="176dp"
            android:layout_marginRight="176dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="100dp" android:layout_marginStart="100dp"
            app:layout_constraintHorizontal_bias="0.243" android:max="6" android:progress="1"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible" android:background="#E3E5E6" app:layout_constraintVertical_bias="0.824"/>
    <EditText
            android:layout_width="61dp"
            android:layout_height="47dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/textBpm" android:layout_marginTop="52dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="164dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="164dp" android:text="100"
    />
    <TextView
            android:text="@string/enter_bpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="76dp" android:layout_marginStart="76dp"/>
    <RadioGroup
            android:layout_width="88dp"
            android:layout_height="119dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.357"
            app:layout_constraintHorizontal_bias="0.0" android:id="@+id/rgTimeSignature"
            android:checkedButton="@id/btn24" android:layout_marginLeft="16dp" android:layout_marginStart="16dp">
        <RadioButton
                android:text="@string/_2_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btn24" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/_3_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btn34" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/_4_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btn44" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/_6_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btn68" android:layout_weight="1"/>
    </RadioGroup>
    <Button
            android:text="@string/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPlus" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="52dp" android:layout_marginEnd="88dp" android:layout_marginRight="88dp"
            app:layout_constraintEnd_toEndOf="parent" android:onClick="onClickPlus"/>
    <Button
            android:text="@string/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMinus" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="52dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="76dp" android:layout_marginStart="76dp" android:onClick="onClickMinus"/>
    <RadioGroup
            android:layout_width="89dp"
            android:layout_height="121dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:checkedButton="@id/firstBeatKick" app:layout_constraintHorizontal_bias="0.422"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="172dp" android:id="@+id/radioFirstBeat">
        <RadioButton
                android:text="@string/kick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/firstBeatKick" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/snare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/firstBeatSnare" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/hihat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/firstBeatHiHat" android:layout_weight="1"/>
    </RadioGroup>
    <TextView
            android:text="@string/first_beat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="138dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="136dp" android:layout_marginStart="136dp"/>
    <TextView
            android:text="@string/other_beats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="138dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="255dp" android:layout_marginStart="255dp"/>
    <TextView
            android:text="@string/time_signature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:id="@+id/textView4" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="138dp"/>
    <RadioGroup
            android:layout_width="101dp"
            android:layout_height="124dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="172dp" android:layout_marginEnd="55dp" android:layout_marginRight="55dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/radioOtherBeat"
            android:checkedButton="@id/otherBeatHiHat">
        <RadioButton
                android:text="@string/kick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/otherBeatKick" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/snare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/otherBeatSnare" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/hihat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/otherBeatHiHat" android:layout_weight="1"/>
    </RadioGroup>
    <ImageView
            android:layout_width="282dp"
            android:layout_height="150dp" tools:srcCompat="@tools:sample/avatars[0]"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="64dp"
            android:layout_marginStart="64dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="88dp" app:layout_constraintBottom_toTopOf="@+id/button"/>

</android.support.constraint.ConstraintLayout>